gitops-manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: between
  labels:
    app.kubernetes.io/name: between
    app.kubernetes.io/part-of: between-gitops
